Update 'backend-tests-go-ufldtjcr' component image to: quay.io/rhtap_qe/backend-tests-go-ufldtjcr:d5b7755d3b01d4b334c18e6baba63606589929e9@sha256:a29566166414fd420e7b03d2ff7f97b710532a39bb8cf802995167e722c1e00e

--- a/components/backend-tests-go-ufldtjcr/overlays/development/deployment-patch.yaml
+++ b/components/backend-tests-go-ufldtjcr/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: backend-tests-go-ufldtjcr
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/rhtap-task-runner:latest
-        name: container-image  
+        - image: quay.io/rhtap_qe/backend-tests-go-ufldtjcr:d5b7755d3b01d4b334c18e6baba63606589929e9@sha256:a29566166414fd420e7b03d2ff7f97b710532a39bb8cf802995167e722c1e00e
+          name: container-image
